WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
141121
Regression(
r179438
) Simple line layout: ASSERTION at SimpleLineLayout::FlowContentsIterator::runWidth()
https://bugs.webkit.org/show_bug.cgi?id=141121
Summary
Regression(r179438) Simple line layout: ASSERTION at SimpleLineLayout::FlowCo...
alan
Reported
2015-01-31 11:14:09 PST
ASSERT(from < to); Empty fragment is passed to FlowContentsIterator::runWidth()
Attachments
Patch
(2.17 KB, patch)
2015-01-31 11:30 PST
,
alan
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
alan
Comment 1
2015-01-31 11:30:04 PST
Created
attachment 245788
[details]
Patch
alan
Comment 2
2015-01-31 11:32:30 PST
(In reply to
comment #1
)
> Created
attachment 245788
[details]
> Patch
I am planning to change splitting logic in a follow-up patch. (that will take care of the thisLine*/nextLine* variable names too.)
WebKit Commit Bot
Comment 3
2015-01-31 12:30:47 PST
Comment on
attachment 245788
[details]
Patch Clearing flags on attachment: 245788 Committed
r179444
: <
http://trac.webkit.org/changeset/179444
>
WebKit Commit Bot
Comment 4
2015-01-31 12:30:50 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug